# customer-churn-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  PROJECT_DEEP_DIVE_1.md  README.md  REPO_AUDIT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
api/: Dockerfile  main.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
churn/: config.py  data.py  evaluate.py  explain.py  fairness.py  features.py  models.py  registry.py  tuning.py  validation.py
churn/genai/: __init__.py  client.py  eval.py  explainer.py  rag.py
data/playbooks/: README.md  autopay_incentive.md  contract_upgrade.md  fiber_quality.md  new_customer_onboarding.md  (+4 more)
deploy/: HF_DEPLOY.md
loadtest/: locustfile.py
logs/: predictions.db
monitoring/: drift.py  generate_drift_report.py
notebooks/: 01_eda.ipynb  README.md  churn_modeling_narrative.ipynb
reports/: best_xgb_params.json  fairness_Dependents.csv  fairness_Partner.csv  fairness_SeniorCitizen.csv  fairness_disparities.csv  fairness_gender.csv  final_test_metrics.json  imbalance_experiment.csv  leaderboard.csv  shap_importance.csv  threshold.json  xgb_param_importances.json
scripts/: check_champion_quality.py
tests/: conftest.py  test_api.py  test_churn_config_and_loader.py  test_churn_dagshub.py  test_churn_data_layer.py  test_churn_evaluate.py  test_churn_explain.py  test_churn_fairness.py  test_churn_features.py  test_churn_genai_client.py  test_churn_genai_config.py  test_churn_genai_eval.py  test_churn_genai_explainer.py  test_churn_genai_rag.py  test_churn_imbalance.py  test_churn_models.py  test_churn_monitoring.py  test_churn_registry.py  test_churn_tuning.py  test_churn_validation.py  test_metrics.py  test_monitoring_drift.py  test_ui_utils.py
training/: preprocess.py  train.py
ui/: Dockerfile  app.py  utils.py
(+3 files in other folders)
